<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PushCoin</string>

	<string-array name="rating_scale">
		<item>Rate Your Experience!</item>
		<item>Not At All Satified</item>
		<item>Slightly Satisfied</item>
		<item>Moderately Satisfied</item>
		<item>Very Satisfied</item>
		<item>Extremely Satisfied</item>
	</string-array>

	<string name="registration_instruction_step_1">Login to <b>pushcoin.com</b></string>
	<string name="registration_instruction_step_2">Click on <b>Devices</b> &#8211; <b>Add Device</b> and choose <b>Mobile App</b></string>
	<string name="registration_instruction_step_3">Fill out description and hit <b>Done</b>. When you are provided with the <b>Registration Code</b>, enter it below.</string>
	<string name="input_reg_code_hint">Enter Registration Code</string>
	<string name="reminder_of_no_payments"><i><b>Reminder:</b> This application cannot be used to make payments (yet). You can check the account balance or view recent transactions.</i></string>
</resources>
